<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:icon="@drawable/ic_color_lens"
        android:title="@string/choose_theme"
        android:key="appTheme"/>

    <com.thirtydegreesray.openhub.ui.widget.colorChooser.ColorChooserPreference
        android:icon="@drawable/ic_color_lens"
        android:title="@string/theme_accent_color"
        android:key="accentColor"/>

    <Preference
        android:icon="@drawable/ic_one"
        android:title="@string/start_page"
        android:key="startPage"/>

    <SwitchPreference
        android:icon="@drawable/ic_http"
        android:title="@string/cache_controller"
        android:summary="@string/cache_controller_desc"
        android:key="cacheFirstEnable"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_switch_material3" />

    <SwitchPreference
        android:icon="@drawable/ic_download"
        android:title="@string/use_system_downloader"
        android:key="systemDownloader"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_switch_material3" />

    <SwitchPreference
        android:icon="@drawable/ic_open_in_browser"
        android:title="@string/use_custom_tabs"
        android:summary="@string/custom_tabs_desc"
        android:key="customTabsEnable"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_switch_material3" />

    <SwitchPreference
        android:icon="@drawable/ic_image"
        android:title="@string/disable_loading_image"
        android:summary="@string/disable_loading_image_desc"
        android:key="disableLoadingImage"
        android:defaultValue="false"
        android:widgetLayout="@layout/preference_widget_switch_material3" />

    <Preference
        android:icon="@drawable/ic_format_size"
        android:title="@string/font_size"
        android:key="fontSize"/>

    <Preference
        android:icon="@drawable/ic_language"
        android:title="@string/language"
        android:key="language"/>

    <Preference
        android:icon="@drawable/ic_search_title"
        android:title="@string/clear_search_history"
        android:key="clearSearchHistory"/>

    <SwitchPreference
        android:icon="@drawable/ic_error"
        android:title="@string/crash_logging"
        android:summary="@string/crash_logging_desc"
        android:key="crashLoggingEnable"
        android:defaultValue="true"
        android:widgetLayout="@layout/preference_widget_switch_material3" />

    <Preference
        android:icon="@drawable/ic_error"
        android:title="@string/view_last_crash"
        android:key="viewLastCrash"/>

</PreferenceScreen>
