<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_languages"
        android:title="@string/my_languages"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_language_title"/>

    <item
        android:id="@+id/action_manage_topics"
        android:title="@string/manage_topics"
        app:showAsAction="ifRoom"/>

    <group android:id="@+id/group_topics_sort" android:checkableBehavior="single">
        <item
            android:id="@+id/action_sort_stars"
            android:title="@string/sort_by_stars"/>
        <item
            android:id="@+id/action_sort_updated"
            android:title="@string/sort_by_updated"/>
        <item
            android:id="@+id/action_sort_created"
            android:title="@string/sort_by_created"/>
    </group>

    <item
        android:id="@+id/action_apply_ignore_list"
        android:title="@string/apply_ignore_list"
        android:checkable="true"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_manage_ignore_list"
        android:title="@string/manage_ignore_list"
        app:showAsAction="never"/>

</menu>
