<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.thirtydegreesray.openhub.ui.activity.GistActivity">
    <item
        android:id="@+id/action_star"
        android:title="@string/star"
        android:icon="@drawable/ic_star_title"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_fork"
        android:title="@string/fork"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/share"
        app:showAsAction="never"/>
</menu>
